# lichess-tv-tui

./: Cargo.toml  LICENSE
.github/workflows/: rust.yml
src/: api.rs  app.rs  main.rs
src/widgets/: board.rs
