[package]
name = "lichess-tv-tui"
description = "A simple TUI app to watch Lichess TV in your terminal"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/quick0831/lichess-tv-tui"

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
ratatui = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.141"
shakmaty = { version = "0.29.0", features = ["serde"] }
ureq = "3.0.12"
